<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarSize="0dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@color/background_color"
    tools:context=".home.bottomnavupload.functioninvitation.FunctionInvitationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/function_invitation_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/toolbar_color"
            app:navigationIcon="@drawable/back_navigation_icon"
            app:titleTextColor="@color/white"
            app:title="@string/my_give_invitations"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/type_of_function"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@color/card_view_color_on_top_of_background"
            app:cardCornerRadius="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/card_view_color_on_top_of_background"
                android:minLines="1"
                android:gravity="center|start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/touch_background_color"
                android:textColorHint="@color/touch_background_color"
                android:hint="@string/type_of_function"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:minLines="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/poem_title"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/card_view_color_on_top_of_background">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/card_view_color_on_top_of_background"
                android:minLines="1"
                android:gravity="center|start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/touch_background_color"
                android:textColorHint="@color/touch_background_color"
                android:hint="@string/name_of_function"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:minLines="1"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/location"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/card_view_color_on_top_of_background"
            app:cardCornerRadius="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/card_view_color_on_top_of_background"
                android:minLines="1"
                android:gravity="center|start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/touch_background_color"
                android:textColorHint="@color/touch_background_color"
                android:hint="@string/function_location_venue"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/function_message_to_users"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/card_view_color_on_top_of_background">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/card_view_color_on_top_of_background"
                android:gravity="start|top"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/touch_background_color"
                android:textColorHint="@color/touch_background_color"
                android:hint="@string/write_something_about_post"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            android:textColor="@color/upload_logo_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/blog_attach_images"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:minLines="1"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/invite_sakesnake_users"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@color/card_view_color_on_top_of_background"
            app:cardCornerRadius="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/card_view_color_on_top_of_background"
                android:minLines="1"
                android:gravity="center|start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textCursorDrawable="@color/touch_background_color"
                android:textColorHint="@color/touch_background_color"
                android:hint="@string/hint_user_name"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:cardBackgroundColor="@color/card_view_color_on_top_of_background"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/invited_users_will_appear_here"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/upload_logo_color"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/invite"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>