<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="0dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".home.bottomnavupload.needhelp.NeedHelpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/toolbar_color"
            app:navigationIcon="@drawable/back_navigation_icon"
            app:titleTextColor="@color/white"
            app:title="@string/need_help"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:minLines="1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/ask_for_help"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/card_view_color_on_top_of_background"
            app:cardCornerRadius="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/card_view_color_on_top_of_background"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="top|start"
                android:textColorHint="@color/touch_background_color"
                android:hint="@string/write_something_here"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:textColor="@color/upload_logo_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/blog_attach_images"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/upload_logo_color"
            android:textColor="@color/white"
            android:text="@string/help_me"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>